--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,17 @@ server:
   port: 80
   servlet:
     context-path: /
+spring:
+  datasource:
+    #引入druid数据源
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://www.jiazhiyong.club:3306/blog?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
+    username: root
+    password: root
+#mybatis:     mybatis整合
+mybatis-plus: #mybatis-plus整合
+  type-aliases-package: club.mike.blog.common.vo      #别名包
+  mapper-locations: classpath:/mybatis/mappers/*.xml
+  configuration:
+    map-underscore-to-camel-case: true   #开启驼峰映射
