--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,5 @@ mybatis-plus: #mybatis-plus整合
   mapper-locations: classpath:/mybatis/mappers/*.xml
   configuration:
     map-underscore-to-camel-case: true   #开启驼峰映射
+logging:
+  config:classpath: logback-boot.xml
